--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,12 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^0.1.2
   neuomorphic_container:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +43,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
